--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.6",
+    "@types/sass": "^1.16.1",
     "chai": "^4.3.4",
     "mocha": "^9.1.1",
+    "node-sass": "^6.0.1",
     "obsidian": "^0.12.16",
     "rollup": "^2.57.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-license": "^2.5.0",
-    "rollup-plugin-sass": "^1.2.8",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.42.1",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
